# sha1-miner-gpu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  fix_cmake_boost.sh  fix_window_lib.bat  install.bat  install.sh
deploy/: deploy-miner.sh
deploy/configs/: example-clore.conf
include/: common_headers.hpp  cxxsha1.hpp  gpu_platform.hpp  job_constants.cuh  job_upload_api.h  multi_gpu_manager.hpp  sha1_gpu.cuh  utilities.hpp
include/miner/: kernel_launcher.cpp  sha1_kernel.cu  sha1_kernel_amd.hip.cpp  sha1_kernel_intel.sycl.cpp  sha1_miner.cu  sha1_miner.cuh  sha1_miner_functions.h  sha1_miner_sycl.hpp  sycl_wrappers.cpp
logging/: logger.hpp
net/: pool_client.cpp  pool_client.hpp  pool_integration.cpp  pool_integration.hpp  pool_protocol.cpp  pool_protocol.hpp  pool_utils.cpp
scripts/: verify_sha1.py
src/: bench.cu  bench.cuh  cxxsha1.cpp  globals.cpp  globals.hpp  gpu_architecture.hpp  host.cpp  host.cu  job_upload.cpp  kernel.cu  main.cpp  mining_system.cpp  mining_system.hpp  multi_gpu_manager.cpp  sha1_hashcat_optimized.cu  util.hpp  verify_sha1.cpp  verify_sha1.cu
src/configs/: config.cpp  config.hpp  config_utils.hpp
src/core/: mining_system.cpp  mining_system.hpp  multi_gpu_manager.cpp  pool_mining.cpp  pool_mining.hpp  solo_mining.cpp  solo_mining.hpp
src/core/architecture/: gpu_architecture.hpp
src/utils/: platform_utils.cpp  platform_utils.hpp  test_utils.cpp  test_utils.hpp
tls/: tls.hpp
